[package]
name = "claude-wakeup"
version = "0.1.0"
edition = "2021"
description = "Tiny Windows tray app that pings the Claude CLI on a schedule to keep the token/usage window warm."

[[bin]]
name = "ClaudeWakeup"
path = "src/main.rs"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_System_SystemInformation",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
