[package]
name = "claude-wakeup"
version = "0.1.0"
edition = "2021"
description = "Tiny Windows tray app that pings the Claude CLI on a schedule to keep the token/usage window warm."

[[bin]]
name = "ClaudeWakeup"
path = "src/main.rs"

[dependencies]
native-windows-gui = { version = "1.0", default-features = false, features = [
    "tray-notification",
    "message-window",
    "menu",
    "textbox",
    "combobox",
    "list-view",
    "file-dialog",
    "image-decoder",
    "cursor",
    "frame",
    "tooltip",
] }
native-windows-derive = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_Power",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
